Fri Mar  2 17:48:09 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Truncate.h (Truncator):

          Fixed one more typo in the ACE_U_LongLong partial specialization
          of this functor.  Also corrected truncation logic.

Thu Mar 1 13:15:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-hpux-11.00.h:
          Removed ACE_HAS_VSWPRINTF, there are dependencies on this
          define and no time to handle this fully.

Thu Mar 1 12:28:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sock_Connect.cpp:
          Fixed sun warning

Thu Mar 1 12:18:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/Misc/test_signals_2.cpp:
          Removed HPUX disabling, compiles fine on our system

Thu Mar 1 9:42:12 UTC 2007  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/ProcessVX_Unix.pm:
          Some fixes for running VxWorks 6.x RTP tests.

Thu Mar  1 08:51:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.{cpp,inl}:
          Introduced new ACE_HAS_VSWPRINTF that we can set when a platform
          has this method

        * ace/config-hpux-11.00.h:
          Added ACE_HAS_VSWPRINTF

Wed Feb 28 21:34:45 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>

        * bin/tao_orb_tests.lst:

          Added two new TAO tests.

Wed Feb 28 19:16:12 UTC 2007  Martin Corino  <mcorino@remedy.nl>

        * ace/DLL_Manager.cpp:
        * ace/Parse_Node.cpp:
          Fixed pointer conversion warnings on OpenVMS.

Wed Feb 28 17:44:20 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Truncate.h (Truncator):

          Fixed typo in the ACE_LACKS_UNSIGNEDLONGLONG_T case.
          s/ACE_UIN32/ACE_UINT32/.

Wed Feb 28 13:32:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-hpux-11.00.h: