@@ -1,3 +1,10 @@
+Fri Mar  2 18:18:25 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
+
+        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:
+
+          Override the targets method to supply a list of targets that can
+          be used with Eclipse.
+
 Fri Mar  2 17:48:09 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>
 
         * ace/Truncate.h (Truncator):
